# Autonomous-AI-Agent

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  package.json
src/: .env.example  api.rs  auth.rs  config.rs  index.ts  knowledge_base.rs  lib.rs  llm_client.rs  main.rs  models.rs  state.rs  wallet.rs
src/api/: mod.rs  twitter.rs
src/config/: config.ts
src/core/: mod.rs  state.rs
src/models/: auth.rs  mod.rs  tweet.rs
src/services/: BTBTweetService.ts  KnowledgeBaseService.ts  LLMClient.ts  OpenRouterService.ts  TwitterApi.ts  TwitterService.ts  WalletManager.ts  WalletService.ts  auth.rs  llm.rs  mod.rs  rate_limiter.rs  wallet.rs
src/types/: index.ts
tests/: api_test.rs  integration_test.rs
