[package]
name = "atomus-ai-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.21"
rand = "0.8"
urlencoding = "2.1"
chrono = { version = "0.4", features = ["serde"] }
ethers = { version = "2.0", features = ["rustls"] }
aes-gcm = "0.10"
dotenv = "0.15"
