[package]
name = "atomus-ai-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11.18", features = ["json", "rustls-tls"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
anyhow = "1.0.71"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
base64 = "0.21.2"
rand = "0.8.5"
urlencoding = "2.1.2"
chrono = { version = "0.4.24", features = ["serde"] }
ethers = { version = "0.13.0", features = ["rustls"] }
aes-gcm = "0.10.1"
dotenv = "0.15.0"
